chore: add property accessor helper (faster than reflection)

--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -8,7 +8,7 @@
 
   <UsingTask TaskName="SetReleaseNotesProperty" AssemblyFile="SIL.ReleaseTasks.dll" />
 
-  <Target Name="AfterBuild">
+  <Target Name="ReleaseNotes" AfterTargets="Pack">
     <PropertyGroup>
       <FilterEntries>true</FilterEntries>
     </PropertyGroup>
