chore: ensure perf test won't be packaged with "dotnet pack"

--- a/tests/ObjectAccessor.Performance/ObjectAccessor.Performance.csproj
+++ b/tests/ObjectAccessor.Performance/ObjectAccessor.Performance.csproj
@@ -9,6 +9,7 @@
     <RunAnalyzersDuringLiveAnalysis>False</RunAnalyzersDuringLiveAnalysis>
     <EnforceCodeStyleInBuild>False</EnforceCodeStyleInBuild>
     <EnableNETAnalyzers>False</EnableNETAnalyzers>
+	<IsPackable>false</IsPackable>
   </PropertyGroup>
 
 	<ItemGroup>
