--- a/src/ObjectTreeWalker/ObjectTreeWalker.csproj
+++ b/src/ObjectTreeWalker/ObjectTreeWalker.csproj
@@ -11,9 +11,18 @@
     <PackageTags>object graph;property iteration;property walker;property enumerator;enumerator;object enumerate;object;iterate;iterator</PackageTags>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="ObjectTreeWalker.csproj.nuget.dgspec.json" />
+    <None Remove="ObjectTreeWalker.csproj.nuget.g.props" />
+    <None Remove="ObjectTreeWalker.csproj.nuget.g.targets" />
+    <None Remove="project.assets.json" />
+    <None Remove="project.nuget.cache" />
+  </ItemGroup>
+
     <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.ObjectPool" Version="*" />
     <PackageReference Include="Sigil" Version="*" />
+    <PackageReference Include="System.Memory" Version="4.5.5" />
   </ItemGroup>
 
 </Project>
