--- a/src/ObjectTreeWalker/ObjectTreeWalker.csproj
+++ b/src/ObjectTreeWalker/ObjectTreeWalker.csproj
@@ -19,6 +19,10 @@
     <None Remove="project.nuget.cache" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="..\..\CHANGELOG.md" Link="CHANGELOG.md" />
+  </ItemGroup>
+
     <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.ObjectPool" Version="*" />
     <PackageReference Include="Sigil" Version="*" />
