--- a/tests/ObjectTreeWalker.Tests/ObjectTreeWalker.Tests.csproj
+++ b/tests/ObjectTreeWalker.Tests/ObjectTreeWalker.Tests.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="fasterflect" Version="3.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
     <PackageReference Include="System.Memory" Version="4.5.5" />
     <PackageReference Include="xunit" Version="2.4.2" />
